Fixed carousel overflowing controls

--- a/website/main/loggi/static/css/style.css
+++ b/website/main/loggi/static/css/style.css
@@ -213,7 +213,6 @@ span img {
 }
 
 .carousel-item {
-    max-width: 100%;
     height: 100%;
 }
 
@@ -418,6 +417,25 @@ span img {
     width: 0;
     height: 0;
     visibility: hidden;
+}
+
+.item-carousel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.carousel-inner {
+    width: 90%;
+    height: 100%;
+}
+
+.carousel-control-prev {
+    width: 5%;
+}
+
+.carousel-control-next {
+    width: 5%;
 }
 
 .carousel-control-prev-icon {
